RSTR-66 prep trunk to align with core Sakai
git-svn-id: https://source.sakaiproject.org/svn/roster2/trunk@168751 66ffb92e-73f9-0310-93c1-f5514f145a0a