@@ -3,15 +3,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.sakaiproject.purepoms</groupId>
-        <artifactId>sakai-standard-tool</artifactId>
-        <version>2.8.0</version>
+        <groupId>org.sakaiproject</groupId>
+        <artifactId>master</artifactId>
+        <version>2.10-SNAPSHOT</version>
+        <relativePath>../master/pom.xml</relativePath>
     </parent>
 
     <name>Sakai Roster2 base pom</name>
     <groupId>org.sakaiproject.roster2</groupId>
     <artifactId>roster2</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>2.10-SNAPSHOT</version>
     <organization>
         <name>Sakai Project</name>
         <url>http://sakaiproject.org/</url>
@@ -21,18 +22,15 @@
 
     <modules>
         <module>roster-app</module>
-        <module>roster-assembly</module>
         <module>roster-help</module>
     </modules>
 
     <properties>
         <lombok.version>0.12.0</lombok.version>
         <poi.version>3.6</poi.version>
+        <spring.version>2.5.6.SEC03</spring.version>
+        <velocity.version>1.7</velocity.version>
         <yuicompressor.plugin.version>0.9</yuicompressor.plugin.version>
-        <coursemanagement.version>1.3-SNAPSHOT</coursemanagement.version>
-		<entitybroker.version>1.6-SNAPSHOT</entitybroker.version>
-        <profile2.api.version>1.6-SNAPSHOT</profile2.api.version>
-        <sakai.common.version>1.3-SNAPSHOT</sakai.common.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -76,7 +74,7 @@
             <organization>Sakai Foundation / University of Michigan</organization>
             <email>arwhyte@umich.edu</email>
             <roles>
-                <role>Past POM plumber</role>
+                <role>POM plumber</role>
                 <role>Past release manager</role>
             </roles>
             <timezone>-5</timezone>
@@ -89,104 +87,11 @@
         <url>https://source.sakaiproject.org/contrib/roster2/trunk/</url>
     </scm>
 
-    <distributionManagement>
-        <site>
-            <id>sakai-site</id>
-            <name>Sakai release Site</name>
-            <url>scpexe://source.sakaiproject.org/var/www/html/release/roster2/${project.version}</url>
-        </site>
-    </distributionManagement>
-
     <pluginRepositories>
-        <pluginRepository>
-            <id>maven2-central-repo</id>
-            <name>Maven2 Central Repo</name>
-            <url>http://repo1.maven.org/maven2/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-        <pluginRepository>
-            <id>Sakai Plugin Repo</id>
-            <url>http://source.sakaiproject.org/maven2</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
         <pluginRepository>
         	<name>oss.sonatype.org - github-releases</name>
         	<id>oss.sonatype.org-github-releases</id>
         	<url>http://oss.sonatype.org/content/repositories/github-releases</url>
         </pluginRepository>
     </pluginRepositories>
-
-    <repositories>
-        <repository>
-            <id>sakai-maven</id>
-            <name>Sakai Maven Repo</name>
-            <layout>default</layout>
-            <url>http://source.sakaiproject.org/maven2</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>sakai-maven2-snapshots</id>
-            <name>Sakai Maven Repo</name>
-            <layout>default</layout>
-            <url>http://source.sakaiproject.org/maven2-snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>default</id>
-            <name>Maven Repository Switchboard</name>
-            <layout>default</layout>
-            <url>http://repo1.maven.org/maven2</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-        	<id>projectlombok.org</id>
-        	<url>http://projectlombok.org/mavenrepo</url>
-        </repository>
-    </repositories>
-
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8</version>
-                <configuration>
-                    <debug>true</debug>
-                    <links>
-                        <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
-                    </links>
-                    <breakiterator>true</breakiterator>
-                    <verbose>false</verbose>
-                    <aggregate>true</aggregate>
-                    <maxmemory>1024m</maxmemory>
-                    <additionalJOption>-J-Xms168m -J-Xmx1024m -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
-                </configuration>
-            </plugin>
-        </plugins>
-    </reporting>
 </project>
